debug.txt
(env_isaaclab) jacky_wang@jacky-wang-Legion-R9000P:/mnt/ssd/dual_isaac_so_arm101$ ./run_play.sh 
[INFO] Using python from: /home/jacky_wang/miniconda3/envs/env_isaaclab/bin/python        
  File "/mnt/ssd/dual_isaac_so_arm101/play_graph_dit_gripper.sh", line 24
    --task)
          ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '[' on line 22
